--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFX7nWMq_3plmeprD6ncT1UQA1BiUYwjdh2SSnKstU3FSPKILos79nA-SAYddYV_gt2iyslYqqMWp2/pub?gid=1795204638&single=true&output=csv";
 
     // Your live Apps Script Web App endpoint
-    const VOTE_API_URL =
-      "https://script.google.com/macros/s/AKfycbzZ1_VGvmFbivzdgA7rmBNCJd4NBSjOjirj92DGWD4oQWQ2N4lF3Qp9XPcqvTULynQP/exec";
-
+   const VOTE_API_URL = "https://script.google.com/macros/s/AKfycbzubEDzSmQjC_wdo_2U6sCZ7nL9k_rlyZ_d8LC0ErkU4sCLnCbw6gmNmYsmWSD6xtn4/exec";
     const VOTE_TOKEN_KEY = "mini_hoopers_vote_token_v1";
     const LOCAL_VOTED_ENTRY_KEY = "mini_hoopers_voted_entry_v1";
 
